使用 sphinx 重新构建文档

--- a/examples/futures.ipynb
+++ b/examples/futures.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import efinance as ef"
    ],
@@ -61,143 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "ef.futures.get_futures_base_info()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "       期货代码      期货名称       secid 归属交易所\n",
-       "0     j2207    焦炭2207   114.j2207   大商所\n",
-       "1    jd2108    鸡蛋2108  114.jd2108   大商所\n",
-       "2        im     铁矿石主力      114.im   大商所\n",
-       "3     i2109   铁矿石2109   114.i2109   大商所\n",
-       "4    ru2108    橡胶2108  113.ru2108   上期所\n",
-       "..      ...       ...         ...   ...\n",
-       "782  rb2204   螺纹钢2204  113.rb2204   上期所\n",
-       "783  hc2203  热轧卷板2203  113.hc2203   上期所\n",
-       "784  jm2206    焦煤2206  114.jm2206   大商所\n",
-       "785  eg2206   乙二醇2206  114.eg2206   大商所\n",
-       "786  hc2108  热轧卷板2108  113.hc2108   上期所\n",
-       "\n",
-       "[787 rows x 4 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>期货代码</th>\n",
-       "      <th>期货名称</th>\n",
-       "      <th>secid</th>\n",
-       "      <th>归属交易所</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>j2207</td>\n",
-       "      <td>焦炭2207</td>\n",
-       "      <td>114.j2207</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>jd2108</td>\n",
-       "      <td>鸡蛋2108</td>\n",
-       "      <td>114.jd2108</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>im</td>\n",
-       "      <td>铁矿石主力</td>\n",
-       "      <td>114.im</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>i2109</td>\n",
-       "      <td>铁矿石2109</td>\n",
-       "      <td>114.i2109</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ru2108</td>\n",
-       "      <td>橡胶2108</td>\n",
-       "      <td>113.ru2108</td>\n",
-       "      <td>上期所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>782</th>\n",
-       "      <td>rb2204</td>\n",
-       "      <td>螺纹钢2204</td>\n",
-       "      <td>113.rb2204</td>\n",
-       "      <td>上期所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>783</th>\n",
-       "      <td>hc2203</td>\n",
-       "      <td>热轧卷板2203</td>\n",
-       "      <td>113.hc2203</td>\n",
-       "      <td>上期所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>784</th>\n",
-       "      <td>jm2206</td>\n",
-       "      <td>焦煤2206</td>\n",
-       "      <td>114.jm2206</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>785</th>\n",
-       "      <td>eg2206</td>\n",
-       "      <td>乙二醇2206</td>\n",
-       "      <td>114.eg2206</td>\n",
-       "      <td>大商所</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>786</th>\n",
-       "      <td>hc2108</td>\n",
-       "      <td>热轧卷板2108</td>\n",
-       "      <td>113.hc2108</td>\n",
-       "      <td>上期所</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>787 rows × 4 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -209,241 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "secid = '115.ZCM'\r\n",
     "ef.futures.get_quote_history(secid)"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "              日期     开盘     收盘     最高     最低     成交量           成交额    振幅  \\\n",
-       "0     2015-05-18  440.0  437.6  440.2  437.6      64  2.806300e+06  0.00   \n",
-       "1     2015-05-19  436.0  437.0  437.6  436.0       6  2.621000e+05  0.36   \n",
-       "2     2015-05-20  436.8  435.8  437.0  434.8       8  3.487500e+05  0.50   \n",
-       "3     2015-05-21  438.0  443.2  446.8  437.8      37  1.631850e+06  2.06   \n",
-       "4     2015-05-22  439.2  441.4  443.8  439.2      34  1.502500e+06  1.04   \n",
-       "...          ...    ...    ...    ...    ...     ...           ...   ...   \n",
-       "1510  2021-07-28  892.4  902.4  909.6  890.4   89853  8.086770e+09  2.14   \n",
-       "1511  2021-07-29  902.6  918.6  919.0  900.4   83106  7.562646e+09  2.07   \n",
-       "1512  2021-07-30  918.6  927.2  943.0  906.2  129862  1.202003e+10  4.04   \n",
-       "1513  2021-08-02  898.0  865.2  898.0  852.4  175701  1.532464e+10  4.93   \n",
-       "1514  2021-08-03  865.4  868.4  876.2  864.0   34949  3.038466e+09  1.40   \n",
-       "\n",
-       "       涨跌幅   涨跌额  换手率  \n",
-       "0     0.00   0.0  0.0  \n",
-       "1    -0.32  -1.4  0.0  \n",
-       "2    -0.23  -1.0  0.0  \n",
-       "3     1.65   7.2  0.0  \n",
-       "4     0.09   0.4  0.0  \n",
-       "...    ...   ...  ...  \n",
-       "1510  0.38   3.4  0.0  \n",
-       "1511  2.07  18.6  0.0  \n",
-       "1512  1.89  17.2  0.0  \n",
-       "1513 -6.53 -60.4  0.0  \n",
-       "1514 -0.44  -3.8  0.0  \n",
-       "\n",
-       "[1515 rows x 11 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>日期</th>\n",
-       "      <th>开盘</th>\n",
-       "      <th>收盘</th>\n",
-       "      <th>最高</th>\n",
-       "      <th>最低</th>\n",
-       "      <th>成交量</th>\n",
-       "      <th>成交额</th>\n",
-       "      <th>振幅</th>\n",
-       "      <th>涨跌幅</th>\n",
-       "      <th>涨跌额</th>\n",
-       "      <th>换手率</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-05-18</td>\n",
-       "      <td>440.0</td>\n",
-       "      <td>437.6</td>\n",
-       "      <td>440.2</td>\n",
-       "      <td>437.6</td>\n",
-       "      <td>64</td>\n",
-       "      <td>2.806300e+06</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-05-19</td>\n",
-       "      <td>436.0</td>\n",
-       "      <td>437.0</td>\n",
-       "      <td>437.6</td>\n",
-       "      <td>436.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.621000e+05</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>-0.32</td>\n",
-       "      <td>-1.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-05-20</td>\n",
-       "      <td>436.8</td>\n",
-       "      <td>435.8</td>\n",
-       "      <td>437.0</td>\n",
-       "      <td>434.8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3.487500e+05</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>-0.23</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015-05-21</td>\n",
-       "      <td>438.0</td>\n",
-       "      <td>443.2</td>\n",
-       "      <td>446.8</td>\n",
-       "      <td>437.8</td>\n",
-       "      <td>37</td>\n",
-       "      <td>1.631850e+06</td>\n",
-       "      <td>2.06</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-05-22</td>\n",
-       "      <td>439.2</td>\n",
-       "      <td>441.4</td>\n",
-       "      <td>443.8</td>\n",
-       "      <td>439.2</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1.502500e+06</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1510</th>\n",
-       "      <td>2021-07-28</td>\n",
-       "      <td>892.4</td>\n",
-       "      <td>902.4</td>\n",
-       "      <td>909.6</td>\n",
-       "      <td>890.4</td>\n",
-       "      <td>89853</td>\n",
-       "      <td>8.086770e+09</td>\n",
-       "      <td>2.14</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1511</th>\n",
-       "      <td>2021-07-29</td>\n",
-       "      <td>902.6</td>\n",
-       "      <td>918.6</td>\n",
-       "      <td>919.0</td>\n",
-       "      <td>900.4</td>\n",
-       "      <td>83106</td>\n",
-       "      <td>7.562646e+09</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1512</th>\n",
-       "      <td>2021-07-30</td>\n",
-       "      <td>918.6</td>\n",
-       "      <td>927.2</td>\n",
-       "      <td>943.0</td>\n",
-       "      <td>906.2</td>\n",
-       "      <td>129862</td>\n",
-       "      <td>1.202003e+10</td>\n",
-       "      <td>4.04</td>\n",
-       "      <td>1.89</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1513</th>\n",
-       "      <td>2021-08-02</td>\n",
-       "      <td>898.0</td>\n",
-       "      <td>865.2</td>\n",
-       "      <td>898.0</td>\n",
-       "      <td>852.4</td>\n",
-       "      <td>175701</td>\n",
-       "      <td>1.532464e+10</td>\n",
-       "      <td>4.93</td>\n",
-       "      <td>-6.53</td>\n",
-       "      <td>-60.4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1514</th>\n",
-       "      <td>2021-08-03</td>\n",
-       "      <td>865.4</td>\n",
-       "      <td>868.4</td>\n",
-       "      <td>876.2</td>\n",
-       "      <td>864.0</td>\n",
-       "      <td>34949</td>\n",
-       "      <td>3.038466e+09</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>-0.44</td>\n",
-       "      <td>-3.8</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1515 rows × 11 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -455,89 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "secids = ['115.ZCM','115.ZC109']\r\n",
     "ef.futures.get_quote_history(secids)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Processing: 115.ZCM: 100%|██████████| 2/2 [00:00<00:00,  3.69it/s]\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'115.ZC109':              日期     开盘     收盘     最高     最低     成交量           成交额    振幅   涨跌幅  \\\n",
-       " 0    2020-09-09  551.2  551.2  551.2  551.2       2  1.102400e+05  0.00  0.00   \n",
-       " 1    2020-09-10  548.6  545.0  549.8  545.0       6  3.289200e+05  0.87 -1.12   \n",
-       " 2    2020-09-11  545.0  544.2  548.4  543.0       7  3.815000e+05  0.99 -0.73   \n",
-       " 3    2020-09-14  546.0  550.4  550.4  546.0       7  3.843000e+05  0.81  0.99   \n",
-       " 4    2020-09-15  549.0  551.2  551.6  549.0      14  7.705600e+05  0.47  0.40   \n",
-       " ..          ...    ...    ...    ...    ...     ...           ...   ...   ...   \n",
-       " 213  2021-07-28  892.4  902.4  909.6  890.4   89853  8.086770e+09  2.14  0.38   \n",
-       " 214  2021-07-29  902.6  918.6  919.0  900.4   83106  7.562646e+09  2.07  2.07   \n",
-       " 215  2021-07-30  918.6  927.2  943.0  906.2  129862  1.202003e+10  4.04  1.89   \n",
-       " 216  2021-08-02  898.0  865.2  898.0  852.4  175701  1.532464e+10  4.93 -6.53   \n",
-       " 217  2021-08-03  865.4  868.4  876.2  864.0   34949  3.038466e+09  1.40 -0.44   \n",
-       " \n",
-       "       涨跌额  换手率  \n",
-       " 0     0.0  0.0  \n",
-       " 1    -6.2  0.0  \n",
-       " 2    -4.0  0.0  \n",
-       " 3     5.4  0.0  \n",
-       " 4     2.2  0.0  \n",
-       " ..    ...  ...  \n",
-       " 213   3.4  0.0  \n",
-       " 214  18.6  0.0  \n",
-       " 215  17.2  0.0  \n",
-       " 216 -60.4  0.0  \n",
-       " 217  -3.8  0.0  \n",
-       " \n",
-       " [218 rows x 11 columns],\n",
-       " '115.ZCM':               日期     开盘     收盘     最高     最低     成交量           成交额    振幅  \\\n",
-       " 0     2015-05-18  440.0  437.6  440.2  437.6      64  2.806300e+06  0.00   \n",
-       " 1     2015-05-19  436.0  437.0  437.6  436.0       6  2.621000e+05  0.36   \n",
-       " 2     2015-05-20  436.8  435.8  437.0  434.8       8  3.487500e+05  0.50   \n",
-       " 3     2015-05-21  438.0  443.2  446.8  437.8      37  1.631850e+06  2.06   \n",
-       " 4     2015-05-22  439.2  441.4  443.8  439.2      34  1.502500e+06  1.04   \n",
-       " ...          ...    ...    ...    ...    ...     ...           ...   ...   \n",
-       " 1510  2021-07-28  892.4  902.4  909.6  890.4   89853  8.086770e+09  2.14   \n",
-       " 1511  2021-07-29  902.6  918.6  919.0  900.4   83106  7.562646e+09  2.07   \n",
-       " 1512  2021-07-30  918.6  927.2  943.0  906.2  129862  1.202003e+10  4.04   \n",
-       " 1513  2021-08-02  898.0  865.2  898.0  852.4  175701  1.532464e+10  4.93   \n",
-       " 1514  2021-08-03  865.4  868.4  876.2  864.0   34949  3.038466e+09  1.40   \n",
-       " \n",
-       "        涨跌幅   涨跌额  换手率  \n",
-       " 0     0.00   0.0  0.0  \n",
-       " 1    -0.32  -1.4  0.0  \n",
-       " 2    -0.23  -1.0  0.0  \n",
-       " 3     1.65   7.2  0.0  \n",
-       " 4     0.09   0.4  0.0  \n",
-       " ...    ...   ...  ...  \n",
-       " 1510  0.38   3.4  0.0  \n",
-       " 1511  2.07  18.6  0.0  \n",
-       " 1512  1.89  17.2  0.0  \n",
-       " 1513 -6.53 -60.4  0.0  \n",
-       " 1514 -0.44  -3.8  0.0  \n",
-       " \n",
-       " [1515 rows x 11 columns]}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# 更多使用例子详见文档 [efinance-docs](https://micro-sheep.github.io/efinance)\n"
+    "# 更多使用例子详见文档 [efinance-docs](https://efinance.readthedocs.io/)\r\n"
    ],
    "metadata": {}
   }
