--- a/examples/fund.ipynb
+++ b/examples/fund.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.9 64-bit"
+   "display_name": "Python 3.7.9 64-bit (system)"
   },
   "metadata": {
    "interpreter": {
@@ -70,18 +70,15 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "基金代码                                                161725\n",
-       "基金简称                                        招商中证白酒指数(LOF)A\n",
-       "FTYPE                                               指数型-股票\n",
-       "FEATURE                                    020,050,051,054\n",
-       "BFUNDTYPE                                                1\n",
-       "                                      ...                 \n",
-       "HSGRT                                                0.10%\n",
-       "BENCH                 中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%\n",
-       "FINSALES                                                 0\n",
-       "INVESTMENTIDEAR                                         --\n",
-       "INVESTMENTIDEARIMG                                      --\n",
-       "Length: 118, dtype: object"
+       "基金代码                                 161725\n",
+       "基金简称                         招商中证白酒指数(LOF)A\n",
+       "成立日期                             2015-05-27\n",
+       "涨跌幅                                   -0.39\n",
+       "最新净值                                 1.2314\n",
+       "基金公司                                   招商基金\n",
+       "净值更新日期                           2021-08-06\n",
+       "简介        产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。\n",
+       "dtype: object"
       ]
      },
      "metadata": {},
@@ -108,34 +105,20 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  6.77it/s]"
+      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  6.55it/s]"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "     基金代码            基金简称   FTYPE          FEATURE  BFUNDTYPE  FUNDTYPE   涨跌幅  \\\n",
-       "0  161725  招商中证白酒指数(LOF)A  指数型-股票  020,050,051,054          1         1 -6.03   \n",
-       "1  005827       易方达蓝筹精选混合  混合型-偏股          211,701          2         2 -2.98   \n",
+       "     基金代码            基金简称        成立日期   涨跌幅    最新净值   基金公司      净值更新日期  \\\n",
+       "0  161725  招商中证白酒指数(LOF)A  2015-05-27 -0.39  1.2314   招商基金  2021-08-06   \n",
+       "1  005827       易方达蓝筹精选混合  2018-09-05  0.07  2.5355  易方达基金  2021-08-06   \n",
        "\n",
-       "     最新净值    LJJZ  SGZT  ... MCOVERDETAIL  \\\n",
-       "0  1.1959  2.8270  开放申购  ...           --   \n",
-       "1  2.4967  2.4967   限大额  ...           --   \n",
-       "\n",
-       "                                     简介 TRKERROR  ESTDIFF  HRGRT  HSGRT  \\\n",
-       "0     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。   0.1604   0.0560  0.80%  0.10%   \n",
-       "1  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。       --   0.2723  0.12%  0.15%   \n",
-       "\n",
-       "                                          BENCH  FINSALES INVESTMENTIDEAR  \\\n",
-       "0          中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%         0              --   \n",
-       "1  沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%         0              --   \n",
-       "\n",
-       "   INVESTMENTIDEARIMG  \n",
-       "0                  --  \n",
-       "1                  --  \n",
-       "\n",
-       "[2 rows x 118 columns]"
+       "                                     简介  \n",
+       "0     产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。  \n",
+       "1  明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。  "
       ],
       "text/html": [
        "<div>\n",
@@ -158,25 +141,12 @@
        "      <th></th>\n",
        "      <th>基金代码</th>\n",
        "      <th>基金简称</th>\n",
-       "      <th>FTYPE</th>\n",
-       "      <th>FEATURE</th>\n",
-       "      <th>BFUNDTYPE</th>\n",
-       "      <th>FUNDTYPE</th>\n",
+       "      <th>成立日期</th>\n",
        "      <th>涨跌幅</th>\n",
        "      <th>最新净值</th>\n",
-       "      <th>LJJZ</th>\n",
-       "      <th>SGZT</th>\n",
-       "      <th>...</th>\n",
-       "      <th>MCOVERDETAIL</th>\n",
+       "      <th>基金公司</th>\n",
+       "      <th>净值更新日期</th>\n",
        "      <th>简介</th>\n",
-       "      <th>TRKERROR</th>\n",
-       "      <th>ESTDIFF</th>\n",
-       "      <th>HRGRT</th>\n",
-       "      <th>HSGRT</th>\n",
-       "      <th>BENCH</th>\n",
-       "      <th>FINSALES</th>\n",
-       "      <th>INVESTMENTIDEAR</th>\n",
-       "      <th>INVESTMENTIDEARIMG</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -184,53 +154,26 @@
        "      <th>0</th>\n",
        "      <td>161725</td>\n",
        "      <td>招商中证白酒指数(LOF)A</td>\n",
-       "      <td>指数型-股票</td>\n",
-       "      <td>020,050,051,054</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-6.03</td>\n",
-       "      <td>1.1959</td>\n",
-       "      <td>2.8270</td>\n",
-       "      <td>开放申购</td>\n",
-       "      <td>...</td>\n",
-       "      <td>--</td>\n",
+       "      <td>2015-05-27</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>1.2314</td>\n",
+       "      <td>招商基金</td>\n",
+       "      <td>2021-08-06</td>\n",
        "      <td>产品特色：布局白酒领域的指数基金，历史业绩优秀，外资偏爱白酒板块。</td>\n",
-       "      <td>0.1604</td>\n",
-       "      <td>0.0560</td>\n",
-       "      <td>0.80%</td>\n",
-       "      <td>0.10%</td>\n",
-       "      <td>中证白酒指数收益率*95%+金融机构人民币活期存款基准利率(税后)*5%</td>\n",
-       "      <td>0</td>\n",
-       "      <td>--</td>\n",
-       "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>005827</td>\n",
        "      <td>易方达蓝筹精选混合</td>\n",
-       "      <td>混合型-偏股</td>\n",
-       "      <td>211,701</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-2.98</td>\n",
-       "      <td>2.4967</td>\n",
-       "      <td>2.4967</td>\n",
-       "      <td>限大额</td>\n",
-       "      <td>...</td>\n",
-       "      <td>--</td>\n",
+       "      <td>2018-09-05</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>2.5355</td>\n",
+       "      <td>易方达基金</td>\n",
+       "      <td>2021-08-06</td>\n",
        "      <td>明星消费基金经理另一力作，A+H股同步布局，价值投资典范，适合长期持有。</td>\n",
-       "      <td>--</td>\n",
-       "      <td>0.2723</td>\n",
-       "      <td>0.12%</td>\n",
-       "      <td>0.15%</td>\n",
-       "      <td>沪深300指数收益率×45%+中证港股通综合指数收益率×35%+中债总指数收益率×20%</td>\n",
-       "      <td>0</td>\n",
-       "      <td>--</td>\n",
-       "      <td>--</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 118 columns</p>\n",
        "</div>"
       ]
      },
@@ -255,30 +198,23 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "processing 005827: 100%|██████████| 2/2 [00:00<00:00,  2.25it/s]\n"
-     ]
-    },
-    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
        "             日期    单位净值    累计净值     涨跌幅\n",
-       "0    2021-07-30  1.1959  2.8270   -6.03\n",
-       "1    2021-07-29  1.2726  2.9037   -1.52\n",
-       "2    2021-07-28  1.2922  2.9233    0.85\n",
-       "3    2021-07-27  1.2813  2.9124    -3.6\n",
-       "4    2021-07-26  1.3292  2.9603   -7.24\n",
+       "0    2021-08-06  1.2314  2.8625   -0.39\n",
+       "1    2021-08-05  1.2362  2.8673   -1.37\n",
+       "2    2021-08-04  1.2534  2.8845   -1.59\n",
+       "3    2021-08-03  1.2736  2.9047    0.95\n",
+       "4    2021-08-02  1.2616  2.8927    5.49\n",
        "...         ...     ...     ...     ...\n",
-       "1503 2015-06-08  1.0380  1.0380  2.5692\n",
-       "1504 2015-06-05  1.0120  1.0120  1.5045\n",
-       "1505 2015-06-04  0.9970  0.9970      --\n",
-       "1506 2015-05-29  0.9950  0.9950      --\n",
-       "1507 2015-05-27  1.0000  1.0000      --\n",
+       "1508 2015-06-08  1.0380  1.0380  2.5692\n",
+       "1509 2015-06-05  1.0120  1.0120  1.5045\n",
+       "1510 2015-06-04  0.9970  0.9970      --\n",
+       "1511 2015-05-29  0.9950  0.9950      --\n",
+       "1512 2015-05-27  1.0000  1.0000      --\n",
        "\n",
-       "[1508 rows x 4 columns]"
+       "[1513 rows x 4 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -308,38 +244,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-07-30</td>\n",
-       "      <td>1.1959</td>\n",
-       "      <td>2.8270</td>\n",
-       "      <td>-6.03</td>\n",
+       "      <td>2021-08-06</td>\n",
+       "      <td>1.2314</td>\n",
+       "      <td>2.8625</td>\n",
+       "      <td>-0.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-07-29</td>\n",
-       "      <td>1.2726</td>\n",
-       "      <td>2.9037</td>\n",
-       "      <td>-1.52</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>1.2362</td>\n",
+       "      <td>2.8673</td>\n",
+       "      <td>-1.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-07-28</td>\n",
-       "      <td>1.2922</td>\n",
-       "      <td>2.9233</td>\n",
-       "      <td>0.85</td>\n",
+       "      <td>2021-08-04</td>\n",
+       "      <td>1.2534</td>\n",
+       "      <td>2.8845</td>\n",
+       "      <td>-1.59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-07-27</td>\n",
-       "      <td>1.2813</td>\n",
-       "      <td>2.9124</td>\n",
-       "      <td>-3.6</td>\n",
+       "      <td>2021-08-03</td>\n",
+       "      <td>1.2736</td>\n",
+       "      <td>2.9047</td>\n",
+       "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-07-26</td>\n",
-       "      <td>1.3292</td>\n",
-       "      <td>2.9603</td>\n",
-       "      <td>-7.24</td>\n",
+       "      <td>2021-08-02</td>\n",
+       "      <td>1.2616</td>\n",
+       "      <td>2.8927</td>\n",
+       "      <td>5.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -349,35 +285,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1503</th>\n",
+       "      <th>1508</th>\n",
        "      <td>2015-06-08</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>1.0380</td>\n",
        "      <td>2.5692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1504</th>\n",
+       "      <th>1509</th>\n",
        "      <td>2015-06-05</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.0120</td>\n",
        "      <td>1.5045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1505</th>\n",
+       "      <th>1510</th>\n",
        "      <td>2015-06-04</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>0.9970</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1506</th>\n",
+       "      <th>1511</th>\n",
        "      <td>2015-05-29</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>0.9950</td>\n",
        "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1507</th>\n",
+       "      <th>1512</th>\n",
        "      <td>2015-05-27</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
@@ -385,7 +321,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1508 rows × 4 columns</p>\n",
+       "<p>1513 rows × 4 columns</p>\n",
        "</div>"
       ]
      },
@@ -414,12 +350,12 @@
      "data": {
       "text/plain": [
        "     基金代码            基金名称       PDATE     NAV  ACCNAV  NAVCHGRT     GSZ  \\\n",
-       "0  161725  招商中证白酒指数(LOF)A  2021-07-30  1.1959  2.8270     -6.03  1.1950   \n",
-       "1  005827       易方达蓝筹精选混合  2021-07-30  2.4967  2.4967     -2.98  2.4669   \n",
+       "0  161725  招商中证白酒指数(LOF)A  2021-08-06  1.2314  2.8625     -0.39  1.2316   \n",
+       "1  005827       易方达蓝筹精选混合  2021-08-06  2.5355  2.5355      0.07  2.5463   \n",
        "\n",
        "   估算涨跌幅              估算时间 NEWPRICE CHANGERATIO     ZJL               HQDATE  \\\n",
-       "0  -6.10  2021-07-30 15:00    1.225       -4.07 -2.4333  2021-07-30 15:34:03   \n",
-       "1  -4.14  2021-07-30 15:00       --          --      --                   --   \n",
+       "0  -0.37  2021-08-06 15:00    1.234        -0.4 -0.2111  2021-08-06 15:34:03   \n",
+       "1   0.50  2021-08-06 15:00       --          --      --                   --   \n",
        "\n",
        "   ISHAVEREDPACKET  \n",
        "0            False  \n",
@@ -465,30 +401,30 @@
        "      <th>0</th>\n",
        "      <td>161725</td>\n",
        "      <td>招商中证白酒指数(LOF)A</td>\n",
-       "      <td>2021-07-30</td>\n",
-       "      <td>1.1959</td>\n",
-       "      <td>2.8270</td>\n",
-       "      <td>-6.03</td>\n",
-       "      <td>1.1950</td>\n",
-       "      <td>-6.10</td>\n",
-       "      <td>2021-07-30 15:00</td>\n",
-       "      <td>1.225</td>\n",
-       "      <td>-4.07</td>\n",
-       "      <td>-2.4333</td>\n",
-       "      <td>2021-07-30 15:34:03</td>\n",
+       "      <td>2021-08-06</td>\n",
+       "      <td>1.2314</td>\n",
+       "      <td>2.8625</td>\n",
+       "      <td>-0.39</td>\n",
+       "      <td>1.2316</td>\n",
+       "      <td>-0.37</td>\n",
+       "      <td>2021-08-06 15:00</td>\n",
+       "      <td>1.234</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>-0.2111</td>\n",
+       "      <td>2021-08-06 15:34:03</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>005827</td>\n",
        "      <td>易方达蓝筹精选混合</td>\n",
-       "      <td>2021-07-30</td>\n",
-       "      <td>2.4967</td>\n",
-       "      <td>2.4967</td>\n",
-       "      <td>-2.98</td>\n",
-       "      <td>2.4669</td>\n",
-       "      <td>-4.14</td>\n",
-       "      <td>2021-07-30 15:00</td>\n",
+       "      <td>2021-08-06</td>\n",
+       "      <td>2.5355</td>\n",
+       "      <td>2.5355</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>2.5463</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>2021-08-06 15:00</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
@@ -748,7 +684,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 更多使用例子详见文档 [efinance-docs](https://micro-sheep.github.io/efinance)\n"
+    "# 更多使用例子详见文档 [efinance-docs](https://efinance.readthedocs.io/)\r\n"
    ],
    "metadata": {}
   }
