--- a/examples/stock.ipynb
+++ b/examples/stock.ipynb
@@ -73,16 +73,16 @@
       "text/plain": [
        "股票代码                  600519\n",
        "股票名称                    贵州茅台\n",
-       "市盈率(动)                 44.08\n",
-       "市净率                    13.44\n",
+       "市盈率(动)                 42.57\n",
+       "市净率                    12.98\n",
        "所处行业                    酿酒行业\n",
-       "总市值          2173410623670.0\n",
-       "流通市值         2173410623670.0\n",
+       "总市值          2099106523800.0\n",
+       "流通市值         2099106523800.0\n",
        "板块编号                  BK0477\n",
        "ROE                     14.2\n",
-       "净利率                  53.3879\n",
+       "净利率                53.387935\n",
        "净利润       24653985551.580002\n",
-       "毛利率                  91.3784\n",
+       "毛利率                91.378421\n",
        "dtype: object"
       ]
      },
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Processing 600519: 100%|██████████| 2/2 [00:00<00:00,  2.45it/s]"
+      "Processing 600519: 100%|██████████| 2/2 [00:00<00:00,  4.64it/s]"
      ]
     },
     {
@@ -119,12 +119,12 @@
      "data": {
       "text/plain": [
        "     股票代码  股票名称  市盈率(动)    市净率  所处行业           总市值          流通市值    板块编号  \\\n",
-       "0  300750  宁德时代  158.82  18.91  汽车行业  1.241594e+12  1.082055e+12  BK0481   \n",
-       "1  600519  贵州茅台   44.08  13.44  酿酒行业  2.173411e+12  2.173411e+12  BK0477   \n",
+       "0  300750  宁德时代  162.03  19.46  汽车行业  1.266701e+12  1.103936e+12  BK0481   \n",
+       "1  600519  贵州茅台   42.57  12.98  酿酒行业  2.099107e+12  2.099107e+12  BK0477   \n",
        "\n",
-       "     ROE      净利率           净利润      毛利率  \n",
-       "0   3.01  12.2289  1.954417e+09  27.2795  \n",
-       "1  14.20  53.3879  2.465399e+10  91.3784  "
+       "     ROE        净利率           净利润        毛利率  \n",
+       "0   3.01  12.228872  1.954417e+09  27.279524  \n",
+       "1  14.20  53.387935  2.465399e+10  91.378421  "
       ],
       "text/html": [
        "<div>\n",
@@ -164,31 +164,31 @@
        "      <th>0</th>\n",
        "      <td>300750</td>\n",
        "      <td>宁德时代</td>\n",
-       "      <td>158.82</td>\n",
-       "      <td>18.91</td>\n",
+       "      <td>162.03</td>\n",
+       "      <td>19.46</td>\n",
        "      <td>汽车行业</td>\n",
-       "      <td>1.241594e+12</td>\n",
-       "      <td>1.082055e+12</td>\n",
+       "      <td>1.266701e+12</td>\n",
+       "      <td>1.103936e+12</td>\n",
        "      <td>BK0481</td>\n",
        "      <td>3.01</td>\n",
-       "      <td>12.2289</td>\n",
+       "      <td>12.228872</td>\n",
        "      <td>1.954417e+09</td>\n",
-       "      <td>27.2795</td>\n",
+       "      <td>27.279524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>600519</td>\n",
        "      <td>贵州茅台</td>\n",
-       "      <td>44.08</td>\n",
-       "      <td>13.44</td>\n",
+       "      <td>42.57</td>\n",
+       "      <td>12.98</td>\n",
        "      <td>酿酒行业</td>\n",
-       "      <td>2.173411e+12</td>\n",
-       "      <td>2.173411e+12</td>\n",
+       "      <td>2.099107e+12</td>\n",
+       "      <td>2.099107e+12</td>\n",
        "      <td>BK0477</td>\n",
        "      <td>14.20</td>\n",
-       "      <td>53.3879</td>\n",
+       "      <td>53.387935</td>\n",
        "      <td>2.465399e+10</td>\n",
-       "      <td>91.3784</td>\n",
+       "      <td>91.378421</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,7 +222,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Processing 600519: 100%|██████████| 2/2 [00:01<00:00,  1.43it/s]\n"
+      "Processing 600519: 100%|██████████| 2/2 [00:00<00:00,  2.47it/s]\n"
      ]
     },
     {
@@ -504,32 +504,32 @@
      "data": {
       "text/plain": [
        "      股票名称    股票代码                日期       开盘       收盘       最高       最低  \\\n",
-       "0     贵州茅台  600519  2021-06-21 09:35  2065.71  2075.71  2080.40  2065.71   \n",
-       "1     贵州茅台  600519  2021-06-21 09:40  2074.71  2074.72  2080.36  2074.71   \n",
-       "2     贵州茅台  600519  2021-06-21 09:45  2074.89  2078.60  2079.70  2066.31   \n",
-       "3     贵州茅台  600519  2021-06-21 09:50  2075.71  2076.57  2077.71  2072.72   \n",
-       "4     贵州茅台  600519  2021-06-21 09:55  2076.57  2068.70  2076.57  2065.71   \n",
+       "0     贵州茅台  600519  2021-06-24 09:35  2020.72  2012.71  2025.71  2004.31   \n",
+       "1     贵州茅台  600519  2021-06-24 09:40  2011.71  2004.32  2015.67  2004.32   \n",
+       "2     贵州茅台  600519  2021-06-24 09:45  2004.71  2010.32  2010.48  2001.71   \n",
+       "3     贵州茅台  600519  2021-06-24 09:50  2010.32  2008.72  2011.71  2007.96   \n",
+       "4     贵州茅台  600519  2021-06-24 09:55  2008.21  2015.71  2015.91  2005.58   \n",
        "...    ...     ...               ...      ...      ...      ...      ...   \n",
-       "1489  贵州茅台  600519  2021-08-03 09:40  1727.99  1726.00  1736.00  1721.00   \n",
-       "1490  贵州茅台  600519  2021-08-03 09:45  1725.99  1702.00  1731.79  1700.00   \n",
-       "1491  贵州茅台  600519  2021-08-03 09:50  1702.00  1714.58  1714.58  1688.80   \n",
-       "1492  贵州茅台  600519  2021-08-03 09:55  1714.87  1721.77  1725.35  1710.00   \n",
-       "1493  贵州茅台  600519  2021-08-03 10:00  1722.00  1730.15  1731.76  1722.00   \n",
+       "1531  贵州茅台  600519  2021-08-06 14:40  1672.66  1672.39  1672.72  1672.39   \n",
+       "1532  贵州茅台  600519  2021-08-06 14:45  1672.40  1671.88  1672.41  1671.88   \n",
+       "1533  贵州茅台  600519  2021-08-06 14:50  1671.88  1669.51  1671.90  1669.00   \n",
+       "1534  贵州茅台  600519  2021-08-06 14:55  1669.86  1671.39  1671.80  1669.51   \n",
+       "1535  贵州茅台  600519  2021-08-06 15:00  1671.38  1671.00  1671.39  1671.00   \n",
        "\n",
-       "       成交量          成交额    振幅   涨跌幅    涨跌额   换手率  \n",
-       "0     2498  522688041.0  0.71  0.20   4.06  0.02  \n",
-       "1     1559  327062303.0  0.27 -0.05  -0.99  0.01  \n",
-       "2     1176  246014973.0  0.65  0.19   3.88  0.01  \n",
-       "3      678  141981728.0  0.24 -0.10  -2.03  0.01  \n",
-       "4      748  156270218.0  0.52 -0.38  -7.87  0.01  \n",
-       "...    ...          ...   ...   ...    ...   ...  \n",
-       "1489  2623  453274084.0  0.87 -0.08  -1.35  0.02  \n",
-       "1490  3697  633087042.0  1.84 -1.39 -24.00  0.03  \n",
-       "1491  3654  621392732.0  1.51  0.74  12.58  0.03  \n",
-       "1492  1677  287967609.0  0.90  0.42   7.19  0.01  \n",
-       "1493   793  136849083.0  0.57  0.49   8.38  0.01  \n",
+       "       成交量          成交额    振幅   涨跌幅   涨跌额   换手率  \n",
+       "0     2645  538472344.0  1.06 -0.30 -6.00  0.02  \n",
+       "1     1214  246514860.0  0.56 -0.42 -8.39  0.01  \n",
+       "2     1383  279945449.0  0.44  0.30  6.00  0.01  \n",
+       "3     1026  208333178.0  0.19 -0.08 -1.60  0.01  \n",
+       "4      955  193800703.0  0.51  0.35  6.99  0.01  \n",
+       "...    ...          ...   ...   ...   ...   ...  \n",
+       "1531   391   65397397.0  0.02  0.00 -0.02  0.00  \n",
+       "1532   587   98155779.0  0.03 -0.03 -0.51  0.00  \n",
+       "1533   690  115244453.0  0.17 -0.14 -2.37  0.01  \n",
+       "1534   960  160370824.0  0.14  0.11  1.88  0.01  \n",
+       "1535  1370  228940541.0  0.02 -0.02 -0.39  0.01  \n",
        "\n",
-       "[1494 rows x 13 columns]"
+       "[1536 rows x 13 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -570,80 +570,80 @@
        "      <th>0</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-06-21 09:35</td>\n",
-       "      <td>2065.71</td>\n",
-       "      <td>2075.71</td>\n",
-       "      <td>2080.40</td>\n",
-       "      <td>2065.71</td>\n",
-       "      <td>2498</td>\n",
-       "      <td>522688041.0</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>4.06</td>\n",
+       "      <td>2021-06-24 09:35</td>\n",
+       "      <td>2020.72</td>\n",
+       "      <td>2012.71</td>\n",
+       "      <td>2025.71</td>\n",
+       "      <td>2004.31</td>\n",
+       "      <td>2645</td>\n",
+       "      <td>538472344.0</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>-6.00</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-06-21 09:40</td>\n",
-       "      <td>2074.71</td>\n",
-       "      <td>2074.72</td>\n",
-       "      <td>2080.36</td>\n",
-       "      <td>2074.71</td>\n",
-       "      <td>1559</td>\n",
-       "      <td>327062303.0</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.99</td>\n",
+       "      <td>2021-06-24 09:40</td>\n",
+       "      <td>2011.71</td>\n",
+       "      <td>2004.32</td>\n",
+       "      <td>2015.67</td>\n",
+       "      <td>2004.32</td>\n",
+       "      <td>1214</td>\n",
+       "      <td>246514860.0</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>-0.42</td>\n",
+       "      <td>-8.39</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-06-21 09:45</td>\n",
-       "      <td>2074.89</td>\n",
-       "      <td>2078.60</td>\n",
-       "      <td>2079.70</td>\n",
-       "      <td>2066.31</td>\n",
-       "      <td>1176</td>\n",
-       "      <td>246014973.0</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>3.88</td>\n",
+       "      <td>2021-06-24 09:45</td>\n",
+       "      <td>2004.71</td>\n",
+       "      <td>2010.32</td>\n",
+       "      <td>2010.48</td>\n",
+       "      <td>2001.71</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>279945449.0</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>6.00</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-06-21 09:50</td>\n",
-       "      <td>2075.71</td>\n",
-       "      <td>2076.57</td>\n",
-       "      <td>2077.71</td>\n",
-       "      <td>2072.72</td>\n",
-       "      <td>678</td>\n",
-       "      <td>141981728.0</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>-0.10</td>\n",
-       "      <td>-2.03</td>\n",
+       "      <td>2021-06-24 09:50</td>\n",
+       "      <td>2010.32</td>\n",
+       "      <td>2008.72</td>\n",
+       "      <td>2011.71</td>\n",
+       "      <td>2007.96</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>208333178.0</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-1.60</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-06-21 09:55</td>\n",
-       "      <td>2076.57</td>\n",
-       "      <td>2068.70</td>\n",
-       "      <td>2076.57</td>\n",
-       "      <td>2065.71</td>\n",
-       "      <td>748</td>\n",
-       "      <td>156270218.0</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>-0.38</td>\n",
-       "      <td>-7.87</td>\n",
+       "      <td>2021-06-24 09:55</td>\n",
+       "      <td>2008.21</td>\n",
+       "      <td>2015.71</td>\n",
+       "      <td>2015.91</td>\n",
+       "      <td>2005.58</td>\n",
+       "      <td>955</td>\n",
+       "      <td>193800703.0</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>6.99</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -663,88 +663,88 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1489</th>\n",
+       "      <th>1531</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-08-03 09:40</td>\n",
-       "      <td>1727.99</td>\n",
-       "      <td>1726.00</td>\n",
-       "      <td>1736.00</td>\n",
-       "      <td>1721.00</td>\n",
-       "      <td>2623</td>\n",
-       "      <td>453274084.0</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>-1.35</td>\n",
+       "      <td>2021-08-06 14:40</td>\n",
+       "      <td>1672.66</td>\n",
+       "      <td>1672.39</td>\n",
+       "      <td>1672.72</td>\n",
+       "      <td>1672.39</td>\n",
+       "      <td>391</td>\n",
+       "      <td>65397397.0</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1490</th>\n",
+       "      <th>1532</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-08-03 09:45</td>\n",
-       "      <td>1725.99</td>\n",
-       "      <td>1702.00</td>\n",
-       "      <td>1731.79</td>\n",
-       "      <td>1700.00</td>\n",
-       "      <td>3697</td>\n",
-       "      <td>633087042.0</td>\n",
-       "      <td>1.84</td>\n",
-       "      <td>-1.39</td>\n",
-       "      <td>-24.00</td>\n",
+       "      <td>2021-08-06 14:45</td>\n",
+       "      <td>1672.40</td>\n",
+       "      <td>1671.88</td>\n",
+       "      <td>1672.41</td>\n",
+       "      <td>1671.88</td>\n",
+       "      <td>587</td>\n",
+       "      <td>98155779.0</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.51</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1491</th>\n",
+       "      <th>1533</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-08-03 09:50</td>\n",
-       "      <td>1702.00</td>\n",
-       "      <td>1714.58</td>\n",
-       "      <td>1714.58</td>\n",
-       "      <td>1688.80</td>\n",
-       "      <td>3654</td>\n",
-       "      <td>621392732.0</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>12.58</td>\n",
-       "      <td>0.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1492</th>\n",
-       "      <td>贵州茅台</td>\n",
-       "      <td>600519</td>\n",
-       "      <td>2021-08-03 09:55</td>\n",
-       "      <td>1714.87</td>\n",
-       "      <td>1721.77</td>\n",
-       "      <td>1725.35</td>\n",
-       "      <td>1710.00</td>\n",
-       "      <td>1677</td>\n",
-       "      <td>287967609.0</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>7.19</td>\n",
+       "      <td>2021-08-06 14:50</td>\n",
+       "      <td>1671.88</td>\n",
+       "      <td>1669.51</td>\n",
+       "      <td>1671.90</td>\n",
+       "      <td>1669.00</td>\n",
+       "      <td>690</td>\n",
+       "      <td>115244453.0</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>-2.37</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1493</th>\n",
+       "      <th>1534</th>\n",
        "      <td>贵州茅台</td>\n",
        "      <td>600519</td>\n",
-       "      <td>2021-08-03 10:00</td>\n",
-       "      <td>1722.00</td>\n",
-       "      <td>1730.15</td>\n",
-       "      <td>1731.76</td>\n",
-       "      <td>1722.00</td>\n",
-       "      <td>793</td>\n",
-       "      <td>136849083.0</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>8.38</td>\n",
+       "      <td>2021-08-06 14:55</td>\n",
+       "      <td>1669.86</td>\n",
+       "      <td>1671.39</td>\n",
+       "      <td>1671.80</td>\n",
+       "      <td>1669.51</td>\n",
+       "      <td>960</td>\n",
+       "      <td>160370824.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1535</th>\n",
+       "      <td>贵州茅台</td>\n",
+       "      <td>600519</td>\n",
+       "      <td>2021-08-06 15:00</td>\n",
+       "      <td>1671.38</td>\n",
+       "      <td>1671.00</td>\n",
+       "      <td>1671.39</td>\n",
+       "      <td>1671.00</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>228940541.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.39</td>\n",
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1494 rows × 13 columns</p>\n",
+       "<p>1536 rows × 13 columns</p>\n",
        "</div>"
       ]
      },
@@ -776,7 +776,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Processing: 600519: 100%|██████████| 2/2 [00:01<00:00,  1.91it/s]\n"
+      "Processing: 600519: 100%|██████████| 2/2 [00:00<00:00,  2.98it/s]\n"
      ]
     }
    ],
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 更多使用例子详见文档 [efinance-docs](https://micro-sheep.github.io/efinance)\r\n"
+    "# 更多使用例子详见文档 [efinance-docs](https://efinance.readthedocs.io/)\r\n"
    ],
    "metadata": {}
   }
