重构部分代码，为 bond 模块添加更多功能

--- a/examples/futures.ipynb
+++ b/examples/futures.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.6 64-bit ('efinance': conda)"
+   "display_name": "Python 3.7.9 64-bit (system)"
   },
   "metadata": {
    "interpreter": {
@@ -23,7 +23,7 @@
    }
   },
   "interpreter": {
-   "hash": "e9ae4a3111741d25bd59cdb8048d29880b3404ce47e161046c7e8029b6cea709"
+   "hash": "e79309c8f6622ce988b04c24bb6d5b54a89cf65be865511eaf3b861e4b3f791f"
   }
  },
  "nbformat": 4,
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "import efinance as ef"
    ],
@@ -61,11 +61,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "ef.futures.get_futures_base_info()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       期货代码     期货名称       secid 归属交易所\n",
+       "0     SA109    纯碱109   115.SA109   郑商所\n",
+       "1     p2202  棕榈油2202   114.p2202   大商所\n",
+       "2        ps   棕榈油次主力      114.ps   大商所\n",
+       "3     p2201  棕榈油2201   114.p2201   大商所\n",
+       "4     SA203    纯碱203   115.SA203   郑商所\n",
+       "..      ...      ...         ...   ...\n",
+       "782  eg2112  乙二醇2112  114.eg2112   大商所\n",
+       "783  eg2110  乙二醇2110  114.eg2110   大商所\n",
+       "784     egm    乙二醇主力     114.egm   大商所\n",
+       "785  eg2109  乙二醇2109  114.eg2109   大商所\n",
+       "786  eb2207  苯乙烯2207  114.eb2207   大商所\n",
+       "\n",
+       "[787 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>期货代码</th>\n",
+       "      <th>期货名称</th>\n",
+       "      <th>secid</th>\n",
+       "      <th>归属交易所</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SA109</td>\n",
+       "      <td>纯碱109</td>\n",
+       "      <td>115.SA109</td>\n",
+       "      <td>郑商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>p2202</td>\n",
+       "      <td>棕榈油2202</td>\n",
+       "      <td>114.p2202</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ps</td>\n",
+       "      <td>棕榈油次主力</td>\n",
+       "      <td>114.ps</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p2201</td>\n",
+       "      <td>棕榈油2201</td>\n",
+       "      <td>114.p2201</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SA203</td>\n",
+       "      <td>纯碱203</td>\n",
+       "      <td>115.SA203</td>\n",
+       "      <td>郑商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>782</th>\n",
+       "      <td>eg2112</td>\n",
+       "      <td>乙二醇2112</td>\n",
+       "      <td>114.eg2112</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>783</th>\n",
+       "      <td>eg2110</td>\n",
+       "      <td>乙二醇2110</td>\n",
+       "      <td>114.eg2110</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>784</th>\n",
+       "      <td>egm</td>\n",
+       "      <td>乙二醇主力</td>\n",
+       "      <td>114.egm</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785</th>\n",
+       "      <td>eg2109</td>\n",
+       "      <td>乙二醇2109</td>\n",
+       "      <td>114.eg2109</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>786</th>\n",
+       "      <td>eb2207</td>\n",
+       "      <td>苯乙烯2207</td>\n",
+       "      <td>114.eb2207</td>\n",
+       "      <td>大商所</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>787 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "metadata": {}
   },
   {
@@ -77,12 +209,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "secid = '115.ZCM'\r\n",
     "ef.futures.get_quote_history(secid)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       期货名称 期货代码          日期     开盘     收盘     最高     最低    成交量           成交额  \\\n",
+       "0     动力煤主力  ZCM  2015-05-18  440.0  437.6  440.2  437.6     64  2.806300e+06   \n",
+       "1     动力煤主力  ZCM  2015-05-19  436.0  437.0  437.6  436.0      6  2.621000e+05   \n",
+       "2     动力煤主力  ZCM  2015-05-20  436.8  435.8  437.0  434.8      8  3.487500e+05   \n",
+       "3     动力煤主力  ZCM  2015-05-21  438.0  443.2  446.8  437.8     37  1.631850e+06   \n",
+       "4     动力煤主力  ZCM  2015-05-22  439.2  441.4  443.8  439.2     34  1.502500e+06   \n",
+       "...     ...  ...         ...    ...    ...    ...    ...    ...           ...   \n",
+       "1519  动力煤主力  ZCM  2021-08-10  879.0  882.4  888.0  872.0  45324  3.990325e+09   \n",
+       "1520  动力煤主力  ZCM  2021-08-11  885.6  896.0  908.8  882.2  49121  4.404189e+09   \n",
+       "1521  动力煤主力  ZCM  2021-08-12  880.0  880.0  895.8  880.0  38732  3.435528e+09   \n",
+       "1522  动力煤主力  ZCM  2021-08-13  764.0  778.6  781.0  758.2  62760  4.832520e+09   \n",
+       "1523  动力煤主力  ZCM  2021-08-16  780.0  779.2  783.6  772.4  23153  1.798988e+09   \n",
+       "\n",
+       "        振幅    涨跌幅    涨跌额  换手率  \n",
+       "0     0.00   0.00    0.0  0.0  \n",
+       "1     0.36  -0.32   -1.4  0.0  \n",
+       "2     0.50  -0.23   -1.0  0.0  \n",
+       "3     2.06   1.65    7.2  0.0  \n",
+       "4     1.04   0.09    0.4  0.0  \n",
+       "...    ...    ...    ...  ...  \n",
+       "1519  1.82   0.14    1.2  0.0  \n",
+       "1520  3.02   1.77   15.6  0.0  \n",
+       "1521  1.76  -1.85  -16.6  0.0  \n",
+       "1522  2.57 -12.22 -108.4  0.0  \n",
+       "1523  1.45   1.19    9.2  0.0  \n",
+       "\n",
+       "[1524 rows x 13 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>期货名称</th>\n",
+       "      <th>期货代码</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>开盘</th>\n",
+       "      <th>收盘</th>\n",
+       "      <th>最高</th>\n",
+       "      <th>最低</th>\n",
+       "      <th>成交量</th>\n",
+       "      <th>成交额</th>\n",
+       "      <th>振幅</th>\n",
+       "      <th>涨跌幅</th>\n",
+       "      <th>涨跌额</th>\n",
+       "      <th>换手率</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2015-05-18</td>\n",
+       "      <td>440.0</td>\n",
+       "      <td>437.6</td>\n",
+       "      <td>440.2</td>\n",
+       "      <td>437.6</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2.806300e+06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2015-05-19</td>\n",
+       "      <td>436.0</td>\n",
+       "      <td>437.0</td>\n",
+       "      <td>437.6</td>\n",
+       "      <td>436.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.621000e+05</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>-0.32</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2015-05-20</td>\n",
+       "      <td>436.8</td>\n",
+       "      <td>435.8</td>\n",
+       "      <td>437.0</td>\n",
+       "      <td>434.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.487500e+05</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>-0.23</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2015-05-21</td>\n",
+       "      <td>438.0</td>\n",
+       "      <td>443.2</td>\n",
+       "      <td>446.8</td>\n",
+       "      <td>437.8</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1.631850e+06</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2015-05-22</td>\n",
+       "      <td>439.2</td>\n",
+       "      <td>441.4</td>\n",
+       "      <td>443.8</td>\n",
+       "      <td>439.2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1.502500e+06</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1519</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2021-08-10</td>\n",
+       "      <td>879.0</td>\n",
+       "      <td>882.4</td>\n",
+       "      <td>888.0</td>\n",
+       "      <td>872.0</td>\n",
+       "      <td>45324</td>\n",
+       "      <td>3.990325e+09</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1520</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2021-08-11</td>\n",
+       "      <td>885.6</td>\n",
+       "      <td>896.0</td>\n",
+       "      <td>908.8</td>\n",
+       "      <td>882.2</td>\n",
+       "      <td>49121</td>\n",
+       "      <td>4.404189e+09</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1521</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2021-08-12</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>895.8</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>38732</td>\n",
+       "      <td>3.435528e+09</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>-1.85</td>\n",
+       "      <td>-16.6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1522</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2021-08-13</td>\n",
+       "      <td>764.0</td>\n",
+       "      <td>778.6</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>758.2</td>\n",
+       "      <td>62760</td>\n",
+       "      <td>4.832520e+09</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>-12.22</td>\n",
+       "      <td>-108.4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523</th>\n",
+       "      <td>动力煤主力</td>\n",
+       "      <td>ZCM</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>779.2</td>\n",
+       "      <td>783.6</td>\n",
+       "      <td>772.4</td>\n",
+       "      <td>23153</td>\n",
+       "      <td>1.798988e+09</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1524 rows × 13 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "metadata": {}
   },
   {
@@ -94,12 +479,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "secids = ['115.ZCM','115.ZC109']\r\n",
     "ef.futures.get_quote_history(secids)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Processing: 115.ZCM: 100%|██████████| 2/2 [00:00<00:00,  6.44it/s]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'115.ZC109':        期货名称   期货代码          日期     开盘     收盘     最高     最低    成交量  \\\n",
+       " 0    动力煤109  ZC109  2020-09-09  551.2  551.2  551.2  551.2      2   \n",
+       " 1    动力煤109  ZC109  2020-09-10  548.6  545.0  549.8  545.0      6   \n",
+       " 2    动力煤109  ZC109  2020-09-11  545.0  544.2  548.4  543.0      7   \n",
+       " 3    动力煤109  ZC109  2020-09-14  546.0  550.4  550.4  546.0      7   \n",
+       " 4    动力煤109  ZC109  2020-09-15  549.0  551.2  551.6  549.0     14   \n",
+       " ..      ...    ...         ...    ...    ...    ...    ...    ...   \n",
+       " 222  动力煤109  ZC109  2021-08-10  879.0  882.4  888.0  872.0  45324   \n",
+       " 223  动力煤109  ZC109  2021-08-11  885.6  896.0  908.8  882.2  49121   \n",
+       " 224  动力煤109  ZC109  2021-08-12  880.0  880.0  895.8  880.0  38732   \n",
+       " 225  动力煤109  ZC109  2021-08-13  880.0  889.8  899.6  876.2  29412   \n",
+       " 226  动力煤109  ZC109  2021-08-16  882.6  888.2  890.0  882.6   7474   \n",
+       " \n",
+       "               成交额    振幅   涨跌幅   涨跌额  换手率  \n",
+       " 0    1.102400e+05  0.00  0.00   0.0  0.0  \n",
+       " 1    3.289200e+05  0.87 -1.12  -6.2  0.0  \n",
+       " 2    3.815000e+05  0.99 -0.73  -4.0  0.0  \n",
+       " 3    3.843000e+05  0.81  0.99   5.4  0.0  \n",
+       " 4    7.705600e+05  0.47  0.40   2.2  0.0  \n",
+       " ..            ...   ...   ...   ...  ...  \n",
+       " 222  3.990325e+09  1.82  0.14   1.2  0.0  \n",
+       " 223  4.404189e+09  3.02  1.77  15.6  0.0  \n",
+       " 224  3.435528e+09  1.76 -1.85 -16.6  0.0  \n",
+       " 225  2.611786e+09  2.64  0.32   2.8  0.0  \n",
+       " 226  6.624954e+08  0.83  0.02   0.2  0.0  \n",
+       " \n",
+       " [227 rows x 13 columns],\n",
+       " '115.ZCM':        期货名称 期货代码          日期     开盘     收盘     最高     最低    成交量           成交额  \\\n",
+       " 0     动力煤主力  ZCM  2015-05-18  440.0  437.6  440.2  437.6     64  2.806300e+06   \n",
+       " 1     动力煤主力  ZCM  2015-05-19  436.0  437.0  437.6  436.0      6  2.621000e+05   \n",
+       " 2     动力煤主力  ZCM  2015-05-20  436.8  435.8  437.0  434.8      8  3.487500e+05   \n",
+       " 3     动力煤主力  ZCM  2015-05-21  438.0  443.2  446.8  437.8     37  1.631850e+06   \n",
+       " 4     动力煤主力  ZCM  2015-05-22  439.2  441.4  443.8  439.2     34  1.502500e+06   \n",
+       " ...     ...  ...         ...    ...    ...    ...    ...    ...           ...   \n",
+       " 1519  动力煤主力  ZCM  2021-08-10  879.0  882.4  888.0  872.0  45324  3.990325e+09   \n",
+       " 1520  动力煤主力  ZCM  2021-08-11  885.6  896.0  908.8  882.2  49121  4.404189e+09   \n",
+       " 1521  动力煤主力  ZCM  2021-08-12  880.0  880.0  895.8  880.0  38732  3.435528e+09   \n",
+       " 1522  动力煤主力  ZCM  2021-08-13  764.0  778.6  781.0  758.2  62760  4.832520e+09   \n",
+       " 1523  动力煤主力  ZCM  2021-08-16  780.0  779.2  783.6  772.4  23153  1.798988e+09   \n",
+       " \n",
+       "         振幅    涨跌幅    涨跌额  换手率  \n",
+       " 0     0.00   0.00    0.0  0.0  \n",
+       " 1     0.36  -0.32   -1.4  0.0  \n",
+       " 2     0.50  -0.23   -1.0  0.0  \n",
+       " 3     2.06   1.65    7.2  0.0  \n",
+       " 4     1.04   0.09    0.4  0.0  \n",
+       " ...    ...    ...    ...  ...  \n",
+       " 1519  1.82   0.14    1.2  0.0  \n",
+       " 1520  3.02   1.77   15.6  0.0  \n",
+       " 1521  1.76  -1.85  -16.6  0.0  \n",
+       " 1522  2.57 -12.22 -108.4  0.0  \n",
+       " 1523  1.45   1.19    9.2  0.0  \n",
+       " \n",
+       " [1524 rows x 13 columns]}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "metadata": {}
   },
   {
